			   XPCE ChangeLog
			   ==============

* FIXED: `file<-read_line' no longer has a limit on the line-length and
  reads lines holding 0-bytes.  Anjo Anjewierden.

* PORT: Make the windows version thread-safe.

* CLEANUP: Deleted death code accessing plterm.dll functions.

* ENHANCED: Various issues around the diagramming class plot_axis.  Fully
  compatible.

VERSION 6.0.10, distributed with SWI-Prolog 5.0.10
==================================================

* FIXED: below mentioned memory-management fixes, causing new problems in
  especially the source-level debugger.  Wouter Jansweijer and a few
  related messages.

* ADDED/FIXED: named attributes to class float_item and checking low/high
  in the stepper functions of this class.


VERSION 6.0.10a, distributed with SWI-Prolog 5.0.10a
====================================================

* FIXED: memory-management problem in `code-referenced' objects.  This
  can be the cause of some hard-to-reproduce crashes.

* FIXED/ENHANCED: Max size of a string is increased from 16MB to 128MB
  and the system handles attempts to create larger strings gracefully.

* FIXED: Improved handling when out of memory.

* FIXED: Some dubious C constructs reported by gcc 3.1 (Paulo Mauro).

* FIXED: Editor text-selection better checking of context (Jakub Jiricek).

* FIXED: When using with multi-threaded SWI-Prolog, avoid deadlock if
  background threads wants to send output.


VERSION 6.0.9, distributed with SWI-Prolog 5.0.9
================================================

* ADDED: Skeleton file for ~/.xpce/Defaults.

* ADDED: First version of system-dependent and hot-switchable key-bindings
  (accelerators).  Provides the important CUA (Common User Access, used
  in Windows) key-bindings by default on Windows and Emacs bindings on
  Unix systems.

* ADDED: Print and Print Selection to PceEmacs, both working on Windows and
  Unix platforms.

* ADDED: `text_image<-character_position'.
